--- a/apply.html
+++ b/apply.html
@@ -26,36 +26,20 @@
                 <li class="nav__item"><a class="nav__link" href="./index.html">Home</a></li>
                 <li class="nav__item"><a class="nav__link" href="./about.html">About Us</a></li>
                 <li class="nav__item"><a class="nav__link" href="./contact.html">Contact</a></li>
-            
+               
             </ul>
         </nav>
     </header>
-
-
+<section>
 
     <br />
-    <h1 class="heading">Contact Us</h1>
+    <h1 class="heading">Apply Now</h1>
     <br>
-<form action="">
-    <!-- name -->
-    <label class="contact" for="name">Name</label>
-    <input class="contact" type="text" name="name" id="name">
-    <br/>
-    <br />
-        <!-- email -->
-        <label class="contact" for="email">Email</label>
-        <input class="contact" type="text" name="email" id="email">
-        <br />
-        <br />
-        <!-- description -->
-        <p>Description</p>
-        <textarea name="description" id="" cols="30" rows="10" placeholder="Your Description"></textarea>
-</form>
     <br />
     <br />
     <br />
     <br />
-
+</section>
     <footer>
         <div class="footer">
             <div class="innter_footer">
