--- a/index.html
+++ b/index.html
@@ -14,21 +14,19 @@
 
         <nav>
 
-            <img class="top-logo" id="logo" src="./images/Cup.png">
+            <img class="top-logo" id="logo" src="./images/Cup.png" alt="logo">
             <h3 class="title">Coffee Junkie</h3>
             <ul class="nav">
                 <div class="left">
-                    <li class="nav__item"><a class="nav__link" href="#">Menu</a></li>
+                    <li class="nav__item"><a class="nav__link" href="./menu.html">Menu</a></li>
                 </div>
                 <div class="right">
-                    <li class="nav__item"><a class="nav__link" href="#">Apply Now</a></li>
+                    <li class="nav__item"><a class="nav__link" href="./apply.html">Apply Now</a></li>
                 </div>
-                <li class="nav__item"><a class="nav__link" href="#">Home</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">About Us</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Locations</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Rewards</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Gift Cards</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Delivery</a></li>
+                <li class="nav__item"><a class="nav__link" href="./index.html">Home</a></li>
+                <li class="nav__item"><a class="nav__link" href="./about.html">About Us</a></li>
+                <li class="nav__item"><a class="nav__link" href="./contact.html">Contact</a></li>
+              
             </ul>
         </nav>
     </header>
@@ -58,7 +56,7 @@
 
                 </div>
                 <div class="image-section">
-                    <img src="./Images/Black.jpg">
+                    <img src="./Images/Black.jpg" alt="black coffee">
                 </div>
             </div>
         </div>
@@ -141,7 +139,7 @@
         <div class="footer">
             <div class="innter_footer">
                 <div class="logo_container">
-                    <img class="bottom-logo" src="./images/Cup.png">
+                    <img class="bottom-logo" src="./images/Cup.png" alt="logo">
 
                     <h3 class="title" align="center">
                         <font color="white">Coffee Junkie
