--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,32 +8,61 @@
     <link rel="stylesheet" href="normalize.css">
     <title>Coffee Junkie</title>
 </head>
+
 <body>
-    <nav>
-    <img src="./Images/logo (3).jpg" id="logo" alt="coffee logo">
-    <h3>Coffee Junkie</h3>
-   <ul class="nav">
-    <li class="nav__item"><a class="nav__link" href="index.html">Home</a></li>
-    <li class="nav__item"><a class="nav__link" href="about.html">About</a></li>
-    <li class="nav__item"><a class="nav__link" href="numbers.html">Numbers</a></li>
-    <li class="nav__item"><a class="nav__link" href="contact.html">Contact</a></li>
-</ul>
-</nav>
-    <img src="./Images/background 2.jpg" width="100%" alt="beans">
+    <header>
+
+        <nav>
+
+            <img class="top-logo" id="logo" src="./images/Cup.png">
+            <h3 class="title">Coffee Junkie</h3>
+            <ul class="nav">
+                <div class="left">
+                    <li class="nav__item"><a class="nav__link" href="./menu.html">Menu</a></li>
+                </div>
+                <div class="right">
+                    <li class="nav__item"><a class="nav__link" href="./apply.html">Apply Now</a></li>
+                </div>
+                <li class="nav__item"><a class="nav__link" href="./index.html">Home</a></li>
+                <li class="nav__item"><a class="nav__link" href="./about.html">About Us</a></li>
+                <li class="nav__item"><a class="nav__link" href="./contact.html">Contact</a></li>
+               
+            </ul>
+        </nav>
+    </header>
+<section>
 
     <br />
-    <h1>About Us</h1>
+    <h1 class="heading">About Us</h1>
     <br>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero quia quaerat sint, impedit praesentium inventore alias asperiores eligendi numquam error nobis nihil culpa ipsa, vel nostrum exercitationem cumque unde? Molestiae alias saepe dicta doloribus illum quod fugiat, repellat ab possimus eaque ratione veritatis rerum vitae unde consequatur ad sit asperiores reprehenderit repellendus necessitatibus et cupiditate. Voluptatibus consequatur quos amet hic necessitatibus doloremque sapiente, dicta illum. Aliquid corrupti, enim laboriosam dolore labore dolorum quam vero temporibus doloribus veniam a? Repellat quas numquam possimus nihil quia ab quaerat ipsum assumenda ea. Rem minus porro aspernatur obcaecati voluptatem dicta sit sed earum. Magnam doloribus maiores amet dolor pariatur voluptates, alias nulla dolore! Animi, non. Culpa ullam commodi sint hic, quisquam ab adipisci similique reiciendis rerum quam? Error quam necessitatibus commodi optio cumque. Iste reprehenderit accusamus impedit cupiditate, ut deleniti labore error harum eius facilis asperiores, libero repellat in animi est ad porro omnis consectetur enim, corrupti quidem. Assumenda perspiciatis numquam nihil eos ducimus quaerat vel autem earum iusto, sapiente fugit quis voluptas repellat magni totam eligendi quae iure veniam! Minima doloremque dolorum consequatur placeat nobis repudiandae libero voluptatibus magnam, laboriosam quia cum id quis obcaecati unde modi adipisci nemo reiciendis iste vel non deleniti alias hic? Laboriosam mollitia corrupti facilis voluptatibus maiores tempora cumque ut molestias distinctio consectetur saepe quae voluptas nulla temporibus possimus est sapiente, dolores esse provident architecto! Accusantium a voluptatem numquam consequatur explicabo nulla quasi, minus quisquam quo quam quas consequuntur impedit nisi dolore eius alias praesentium, aliquid tempora reiciendis nesciunt dolores nam? Quibusdam nihil reprehenderit maxime, fuga placeat maiores totam voluptatem saepe ipsa! Facere veritatis consequuntur quos, aut eius iste dicta nobis quas itaque aliquid suscipit corporis impedit dignissimos temporibus distinctio ratione sint sapiente? Ut suscipit maxime molestiae, mollitia soluta sint temporibus vel reiciendis quod in qui sunt sit delectus praesentium amet aliquam nihil repellendus obcaecati officiis vero, quasi tempora laborum nemo. Placeat libero, eum repellat suscipit ipsam commodi odit, eligendi, unde nemo ut ipsa eveniet non. Expedita cum molestiae repellendus similique rem, nisi laboriosam repudiandae unde quidem quae in velit consequatur nesciunt at, corporis fuga! Tempore distinctio iusto obcaecati, assumenda corporis nemo soluta laborum. Laborum praesentium eum quae autem perspiciatis velit itaque, eius ea fugiat molestias blanditiis soluta consectetur quos possimus a ipsam atque. Voluptatum officiis explicabo obcaecati illum neque vel amet reprehenderit soluta quos nulla possimus eaque ipsam, ullam repellat quidem nam voluptatibus ad cumque dolorum veritatis temporibus numquam similique minus. Impedit culpa totam corrupti, suscipit neque labore repudiandae officia qui placeat vero, hic mollitia fuga itaque quos quae, eos nulla voluptatum vel. Repudiandae nam iste aut, reiciendis dicta, voluptatem doloribus asperiores quia veniam dolor, exercitationem unde culpa! Cumque sint libero sapiente numquam explicabo minus voluptatibus itaque enim corporis voluptates fugiat officia, velit perspiciatis aut dolores vitae cum nobis fugit illum non quod! Illo porro minus aliquid molestiae in velit consequatur natus, quibusdam dolore animi fugit quos minima sed. Molestias maxime veniam recusandae nobis commodi veritatis expedita dolorum delectus et perspiciatis ut quas voluptas possimus, eos iste!</p>
     <br />
     <br />
     <br />
     <br />
+</section>
+    <footer>
+        <div class="footer">
+            <div class="innter_footer">
+                <div class="logo_container">
+                    <img class="bottom-logo" src="./images/Cup.png" alt="logo">
 
-    <p>copyright&copy;2021</p>
-    <h3><a href="#logo">Back To top</a></h3>
+                    <h3 class="title" align="center">
+                        <font color="white">Coffee Junkie
+                    </h3>
+                    </font>
 
+                    <p align="center">
+                        <font color="white"><i>Copyright © 2021, Coffee Junkie, Inc. All rights reserved.</i>
+                    </p>
+                    </font>
+                   <div class="B2T"> <a href="#logo">Back to top</a></div>
+                   
 
+                </div>
+            </div>
+        </div>
+
+    </footer>
 </body>
 
 </html>
