--- a/about.html
+++ b/about.html
@@ -35,11 +35,41 @@
     <br />
     <h1 class="heading">About Us</h1>
     <br>
-    <br />
-    <br />
-    <br />
-    <br />
-</section>
+    
+ 
+
+    <!-- About us-->
+    <section class='section--page1' id="section1">
+        <div class="section">
+            <div class="container">
+                <div class="content-section">
+                    <div class="title">
+                        <h1>Hello!</h1>
+                    </div>
+                    <div class="content">
+                        <h3>Let's be friends</h3>
+                        <p>"The Coffee Junkie is open in Downtown Toronto! We are excited to introduce our Coffee Shop. 
+                            If you crave great coffee, you’ll love knowing that we provide a real alternative to chains with handcrafted coffee and espresso drinks, a full tea bar, and real food options. 
+                            You can complete your coffee with one of our delicious sweet treats made by our very own bakers. We look forward to serving you at Coffee Junkie shop."
+                        </p>
+                            <div class="button">
+                            <a href="">Read More</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="image-section">
+                    <img src="./Images/about.png" alt="about">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+<br>
+<br>
+<br>
+<br>
     <footer>
         <div class="footer">
             <div class="innter_footer">
