--- a/menu.html
+++ b/menu.html
@@ -30,15 +30,33 @@
             </ul>
         </nav>
     </header>
-<section>
+
 
     <br />
     <h1 class="heading">Menu</h1>
     <br>
-    <br />
-    <br />
-    <br />
-    <br />
+   
+
+<!-- Menu-->
+<section class='section--page1' id="section1">
+    <div class="section">
+        <div class="container">
+            <div class="content-section">
+                <div class="title">
+                    <h1>Here is your menu</h1>
+                </div>
+                <div class="content">
+                    <h3>Let's get started</h3>
+                    
+                        
+                </div>
+
+            </div>
+            <div class="image-section">
+                <img src="./Images/drawing.png" alt="menu">
+            </div>
+        </div>
+    </div>
 </section>
     <footer>
         <div class="footer">
