--- a/menu.html
+++ b/menu.html
@@ -46,7 +46,7 @@
                     <h1>Here is your menu</h1>
                 </div>
                 <div class="content">
-                    <h3>Let's get started</h3>
+                    <h3>"What would you like to order?"</h3>
                     
                         
                 </div>
