--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="content">
                         
-                        <h3>Love to here from you :D</h3>
+                        <h3>Love to hear from you :D</h3>
                         <form action="">
                             <!-- name -->
                             <label class="contact" for="name">Name</label>
